Fixed some alignment issues. Size of visualizations is now set to a fixed size (pixel based).

--- a/Programming/javascript/visualization/style.css
+++ b/Programming/javascript/visualization/style.css
@@ -38,3 +38,15 @@ polyline{
     stroke-width: 2px;
     fill: none;
 }
+
+#reactions{
+    width: 300px;
+    height: 400px;
+    float:left;
+}
+
+#piechart{
+    width: 500px;
+    height: 400px;
+    float:left;
+}
